# organice will not reflow if there's hard-wrapped content
# -*- eval: (auto-fill-mode 0) -*-

* General

All user visible changes to organice will be documented in this file.

When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.

* [2026-01-07 Tue]

** Added

*** Org Habits consistency graph
    - Visual consistency graph showing habit completion over time
    - Color-coded status indicators matching Emacs org-mode:
      - Green: Completed on this day
      - Blue: Not due yet (in grace period)
      - Yellow: Scheduled for this day, or due tomorrow
      - Red: Overdue (you missed this day)
    - Habits sorted before non-habits in agenda view
    - Settings for graph configuration:
      - Org habit preceding days (default: 21)
      - Org habit following days (default: 7)
      - Show all habits today
    - Habits identified by =STYLE: habit= property
    - Uses =:LOGBOOK:= entries to track completion history
    - Automatically sets =LAST_REPEAT= property on completion

See the [[https://organice.200ok.ch/documentation.html#org_habits][documentation]] for more details on habit configuration and usage.

** Fixed

*** Settings reset to defaults when config file is missing fields

Base settings (including Org habits settings) were being overwritten with =undefined= values when the sync backend config file didn't contain those fields. This happened when using an older config file or when settings were added after the initial config file was created.

Settings now correctly persist from localStorage even when the config file is missing specific fields.

* [2025-12-01 Mon]

** Added

*** Add "#" and "%" as valid characters for tag searches

PR: https://github.com/200ok-ch/organice/pull/1055

Thank you [[https://github.com/cperl82][cperl82]] for the PR🙏

** Fixed

*** Dropbox sorting

The old Dropbox sorting could do the wrong thing when the sort